# csp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lua-format  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  LICENSE.md  README-zh_CN.md  README.md  csp.py  csp.sln  csp.sln.DotSettings  electron-builder.json5  eslint.config.js  index.html  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tester.py  tsconfig.json  unit-test.py  uno.config.ts  vite.config.ts  win-installer.nsi
apps/dev/: CMakeLists.txt  Configure.h.in  Main.cpp
apps/dev/components/debug/: Debug.cpp  Debug.h
apps/dev/components/git/: Git.cpp  Git.h
apps/dev/components/jobs/: AbstractJob.cpp  AbstractJob.h  CspCoderJob.cpp  CspCoderJob.h  CspRepoJob.cpp  CspRepoJob.h  GitJob.cpp  GitJob.h  PythonJob.cpp  PythonJob.h
apps/dev/components/misc/: Utils.cpp  Utils.h
apps/dev/components/package/: PackageDescriptionTable.cpp  PackageDescriptionTable.h  PackageManager.cpp  PackageManager.h
apps/dev/components/parse/: QtJson.h  QtYaml.h
apps/dev/components/project/: Project.cpp  Project.h  ProjectTable.cpp  ProjectTable.h
apps/dev/components/python/: Python.cpp  Python.h  PythonAsync.cpp  PythonAsync.h
apps/dev/components/repo/: ChipSummaryTable.cpp  ChipSummaryTable.h  IpTable.cpp  IpTable.h  MapTable.cpp  MapTable.h  PinoutTable.cpp  PinoutTable.h  Repo.cpp  Repo.h  RepositoryTable.cpp  RepositoryTable.h
apps/dev/components/settings/: Settings.cpp  Settings.h
apps/dev/components/tools/: ToolCspCoder.cpp  ToolCspCoder.h  ToolCspRepo.cpp  ToolCspRepo.h
apps/dev/components/xmake/: XMake.cpp  XMake.h  XMakeAsync.cpp  XMakeAsync.h
apps/dev/dialogs/: choose_chip_dialog.cpp  choose_chip_dialog.h  choose_chip_dialog.ui  choose_mcu_dialog.cpp  choose_mcu_dialog.h  choose_mcu_dialog.ui  package_manager_dialog.cpp  package_manager_dialog.h  package_manager_dialog.ui  wizard_new_project.cpp  wizard_new_project.h
apps/dev/inc/: GraphicsItemChipBody.h  GraphicsItemPin.h  LQFP.h  LogBox.h  configure.h.in  graphicsitem_chipbody.h  graphicsitem_pin.h  graphicsitem_pinbody.h  home_view.h  logviewbox.h  lqfp.h  mainwindow_view.h
apps/dev/resources/: resources.qrc  windows.rc
apps/dev/src/: Main.cpp  main.cpp
apps/dev/tests/: Main.cpp
apps/dev/views/: DialogChooseChip.cpp  DialogChooseChip.h  DialogChooseChip.ui  DialogPackageManager.cpp  DialogPackageManager.h  DialogPackageManager.ui  ViewConfigure.cpp  ViewConfigure.h  ViewConfigure.ui  ViewHome.cpp  ViewHome.h  ViewHome.ui  ViewMainWindow.cpp  ViewMainWindow.h  ViewMainWindow.ui  WizardNewProject.cpp  WizardNewProject.h  chip_configure_view.cpp  chip_configure_view.h  chip_configure_view.ui  dialog_choose_chip.cpp  dialog_choose_chip.h  dialog_choose_chip.ui  dialog_package_manager.cpp  dialog_package_manager.h  dialog_package_manager.ui  home_view.cpp  home_view.h  home_view.ui  mainwindow_view.cpp  mainwindow_view.h  mainwindow_view.ui  mcu_configure_view.cpp  mcu_configure_view.h  mcu_configure_view.ui  wizard_new_project.cpp
apps/dev/widgets/: GraphicsItemChipBody.cpp  GraphicsItemChipBody.h  GraphicsItemPin.cpp  GraphicsItemPin.h  GraphicsViewPanZoom.cpp  GraphicsViewPanZoom.h  LogBox.h  PlainTextEditLineNumber.cpp  PlainTextEditLineNumber.h  PropertyBrowserPin.cpp  PropertyBrowserPin.h
common/compat_layer/: CMakeLists.txt
common/compat_layer/nlohmann-json/: qtjson.h
common/compat_layer/test/: testcase_qtjson.cpp
common/compat_layer/yaml-cpp/: qtyaml.h
common/core/: CMakeLists.txt
common/core/inc/: config.h  configure.h.in  csp_config.h  git.h  os.h  path.h  utils.h  xmake.h
common/core/resources/: core.qrc
common/core/src/: config.cpp  csp_config.cpp  git.cpp  os.cpp  path.cpp  utils.cpp  xmake.cpp
common/core/test/: testcase_config.cpp  testcase_csp_config.cpp  testcase_git.cpp  testcase_os.cpp  testcase_path.cpp  testcase_xmake.cpp
common/project/: CMakeLists.txt
common/project/inc/: Project.h  ProjectTable.h  generate_code.h  generate_xmake.h  generator.h  project.h  project_table.h
common/project/resources/: project.qrc
common/project/src/: Project.cpp  ProjectTable.cpp  generate_code.cpp  generate_xmake.cpp  generator.cpp  project.cpp  project_table.cpp
common/project/test/: TestCaseProject.cpp  TestCaseProjectTable.cpp  testcase_generate_xmake.cpp  testcase_generator.cpp  testcase_project.cpp  testcase_project_table.cpp
common/utils/: CMakeLists.txt
common/utils/inc/: utils.h
common/xmake/: CMakeLists.txt
common/xmake/inc/: XMake.h  XMakeAsync.h
common/xmake/src/: XMake.cpp  XMakeAsync.cpp
common/xmake/test/: TestCaseXMake.cpp
components/: CMakeLists.txt
components/inc/: GraphicsViewPanZoom.h  PropertyBrowserPin.h  graphicsview_panzoom.h  propertybrowser.h
components/interface/: InterfaceGraphicsItemPin.h  interface_graphicsitem_pin.h
components/resources/: components.qrc
components/resources/translations/: CspComponents.zh_CN.ts  CspComponents.zh_TW.ts  components.zh_CN.ts  components.zh_TW.ts
components/src/: GraphicsViewPanZoom.cpp  PropertyBrowserPin.cpp  graphicsview_panzoom.cpp  propertybrowser.cpp
src/: App.vue  (+1 more)
tools/: CMakeLists.txt  __init__.py  contributors.py  contributors.ts  csp2filter.py  deploy.sh  find_lower_camel.py  lrelease.py  lupdate.py  pyuic.py  schema.py  schema.ts
tools/coder/: CMakeLists.txt  csp-coder.py  helper_keil.py
tools/coder/rust-csp2mdk/: CMakeLists.txt  Cargo.toml
tools/coder/templates/: csp-file-base.c.j2  csp-file-base.cmake.j2  csp-file-base.h.j2  csp-file-base.main.c.j2  csp-file-base.make.j2  csp-file-base.xmake.lua.j2
tools/cubemx/converters/: families2repository.py  mcu2summary.py
tools/cubemx_tool/: __init__.py  families2repository.py  mcu2summary.py
tools/drawio_tool/: __init__.py  drawio.py
tools/release/: linux-full.sh  linux-lite.sh  linux.sh  requirements.txt  windows-full.ps1  windows-lite.ps1  windows-mingw.ps1  windows-msvc.ps1  windows.ps1
tools/repo/: CMakeLists.txt  csp-repo.py
tools/repo/resources/: package.yml
(+889 files in other folders)
