[package]
name = "csp2mdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
rust-embed="8.2.0"
xmltree = "0.10.3"
